service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will42-service
  namespace: dev
spec:
  selector:
    app: will42
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
