ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: will42-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: will42-service
            port:
              number: 8888
